--- a/Bulletproof/src/main/AndroidManifest.xml
+++ b/Bulletproof/src/main/AndroidManifest.xml
@@ -9,4 +9,10 @@
     package="us.newberg.bulletproof"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <application/>
+
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+
 </manifest>
