--- a/build.common.gradle
+++ b/build.common.gradle
@@ -28,7 +28,7 @@ android {
         debug {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
-            storeFile file('../libs/ftc.debug.keystore')
+            storeFile rootProject.file('libs/ftc.debug.keystore')
             storePassword 'android'
         }
     }
@@ -54,7 +54,7 @@ android {
          * @see <a href="http://developer.android.com/tools/building/configuring-gradle.html">Configure Your Build</a>
          * @see <a href="http://developer.android.com/tools/publishing/versioning.html">Versioning Your App</a>
          */
-        def manifestFile = file('../FtcRobotController/src/main/AndroidManifest.xml');
+        def manifestFile = project(':FtcRobotController').file('src/main/AndroidManifest.xml');
         def manifestText = manifestFile.getText()
         //
         def vCodePattern = Pattern.compile("versionCode=\"(\\d+(\\.\\d+)*)\"")
@@ -74,7 +74,7 @@ android {
     // Advanced user code might just want to use Vuforia directly, so we set up the libs as needed
     buildTypes {
         release {
-            debuggable true
+            //debuggable true
             ndk {
                 abiFilters "armeabi-v7a"
             }
@@ -94,13 +94,14 @@ android {
 
     sourceSets.main {
         jni.srcDirs = []
-        jniLibs.srcDir "../libs"
+        jniLibs.srcDir rootProject.file('libs')
+
     }
 }
 
 repositories {
     flatDir {
-        dirs '../libs'
+        dirs rootProject.file('libs')
     }
 }
 
