--- a/Bulletproof/build.release.gradle
+++ b/Bulletproof/build.release.gradle
@@ -7,6 +7,7 @@ dependencies {
     compile (name:'Analytics-release', ext:'aar')
     compile (name:'WirelessP2p-release', ext:'aar')
 //    compile (name: 'Vuforia', ext:'jar')
+    compile project(':NewbergCommon')
     compile project(':ftc-visionlib')
     compile project(':opencv-java')
 }
