--- a/FtcRobotController/build.release.gradle
+++ b/FtcRobotController/build.release.gradle
@@ -8,6 +8,6 @@ dependencies {
     compile (name:'ModernRobotics-release', ext:'aar')
     compile (name:'Analytics-release', ext:'aar')
     compile (name:'WirelessP2p-release', ext:'aar')
-    compile project(':ftc-visionlib')
-    compile project(':opencv-java')
+//    compile project(':ftc-visionlib')
+//    compile project(':opencv-java')
 }
