Changed BlueBeacons to something coser to what was used during competition

--- a/opencv-java/build.gradle
+++ b/opencv-java/build.gradle
@@ -9,6 +9,12 @@ android {
         targetSdkVersion 19
     }
 
+    android {
+        lintOptions {
+            abortOnError false
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
