--- a/Bulletproof/build.release.gradle
+++ b/Bulletproof/build.release.gradle
@@ -7,4 +7,5 @@ dependencies {
     compile (name:'Analytics-release', ext:'aar')
     compile (name:'WirelessP2p-release', ext:'aar')
     compile project(':NewbergCommon')
+    compile (group: 'com.elvishew', name: 'xlog', version: '1.3.0')
 }
