--- a/FtcRobotController/build.gradle
+++ b/FtcRobotController/build.gradle
@@ -25,6 +25,8 @@ repositories {
     flatDir {
         dirs '../libs'
     }
+
+    mavenCentral()
 }
 apply from: 'build.release.gradle'
 dependencies {
