--- a/FtcRobotController/build.release.gradle
+++ b/FtcRobotController/build.release.gradle
@@ -7,4 +7,6 @@ dependencies {
     compile (name:'ModernRobotics-release', ext:'aar')
     compile (name:'Analytics-release', ext:'aar')
     compile (name:'WirelessP2p-release', ext:'aar')
+    compile project(':NewbergCommon')
+    compile (group: 'com.elvishew', name: 'xlog', version: '1.3.0')
 }
