--- a/build.common.gradle
+++ b/build.common.gradle
@@ -103,6 +103,8 @@ repositories {
     flatDir {
         dirs rootProject.file('libs')
     }
+
+    mavenCentral()
 }
 
 apply from: 'build.release.gradle'
